<resources>
    <string name="app_name">USTH Weather</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="cloudy1">Cloudy\n22–29C</string>
    <string name="city">Paris</string>
    <string name="weather_forecast">12C\nCloudy</string>
    <string name="cloudy2">Cloudy\n22–30C</string>
    <string name="cloudy3">Cloudy\n23–31C</string>
    <string name="shower1">Showers\n24–30C</string>
    <string name="shower2">Showers\n24–26C</string>
    <string name="rain">Rain\n22–23C</string>
    <string name="thunderstorms">Thunderstorms\n25–28C</string>
    <string name="sct_thunderstorms1">Scattered Thunderstorms\n24–27C</string>
    <string name="sct_thunderstorms2">Scattered Thunderstorms\n23–27C</string>
    <string name="sct_showers">Scattered Showers\n22–27C</string>
    <string name="weather_icon" translatable="false">Rainy icon</string>
    <string name="title_activity_pref">PrefActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>