<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cloudy1"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cloudy1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/shower1"
            android:src="@drawable/rain" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shower1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rain"
            android:src="@drawable/rain" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/sct_showers"
            android:src="@drawable/scatter_storm" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sct_showers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cloudy2"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cloudy2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cloudy3"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cloudy3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/thunderstorms"
            android:src="@drawable/thunder_storm" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/thunderstorms" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/sct_thunderstorms1"
            android:src="@drawable/scatter_storm" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sct_thunderstorms1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/shower2"
            android:src="@drawable/rain" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shower2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="@dimen/day_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="@dimen/icon_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/sct_thunderstorms2"
            android:src="@drawable/scatter_storm" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="@dimen/forecast_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sct_thunderstorms2" />
    </LinearLayout>
</LinearLayout>