<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moodle_frame"
    tools:context=".WeatherFragment">


    <TextView
        android:id="@+id/degree"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_forecast"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/weather_width"
        android:layout_height="@dimen/weather_height"
        android:layout_below="@+id/degree"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/rain" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/city"
        tools:ignore="RelativeOverlap" />



</RelativeLayout>